fix: mobile overflow-x

--- a/assets/styles/extra.scss
+++ b/assets/styles/extra.scss
@@ -9,6 +9,10 @@ html {
   scroll-behavior: unset;
   font-variant-numeric: tabular-nums;
 }
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -209,7 +213,26 @@ pre {
   margin: -30px -45px;
   padding: 30px 45px;
   border-radius: 2rem;
-  box-shadow: 0 0 1px var(--gray), 3px 3px 21px -5px var(--gray);
+  box-shadow: 0 0 1px rgba(#333, 0.2), 2px 3px 21px -5px rgba(#333, 0.2);
+
+  @media (max-width: 599px) {
+    & {
+      margin: 0;
+      padding: 0;
+      background-color: initial;
+      box-shadow: unset;
+    }
+    &::before {
+      content: '';
+      position: absolute;
+      top: -3em; //3em 1.25em
+      bottom: -10px;
+      right: -1.25em;
+      left: -1.25em;
+      background-color: var(--light-bg);
+      z-index: -1;
+    }
+  }
 }
 
 .is-note #write {
